samples/_failures_safe/1761130553_141142_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27a7928f.c: In function ‘main’:
./samples/SAFE/__tmp_27a7928f.c:154:12: error: missing terminating " character
  154 |     printf("Enter expression to token
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_27a7928f.c:154:5: error: expected expression at end of input
  154 |     printf("Enter expression to token
      |     ^~~~~~
./samples/SAFE/__tmp_27a7928f.c:154:5: error: expected declaration or statement at end of input
